--- a/shop-single.html
+++ b/shop-single.html
@@ -11,6 +11,9 @@
   <link id="mainStyles" rel="stylesheet" media="screen" href="css/styles.min.css">
   <!-- Modernizr-->
   <script src="js/modernizr.min.js"></script>
+
+  <!--      ADD GOOGLE ANALYTICS HERE            -->
+  
 </head>
 <!-- Body-->
 
