--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
 
       gtag('config', 'UA-118301526-1');
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-118312156-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-118312156-1');
+</script>
+
   </head>
   <!-- Body-->
   <body>
