--- a/shop-grid-ls.html
+++ b/shop-grid-ls.html
@@ -14,7 +14,16 @@
 
     <!--      ADD GOOGLE ANALYTICS HERE            -->
 
-    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-118312156-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-118312156-1');
+</script>
+
   </head>
   <!-- Body-->
   <body>
